--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,7 +59,7 @@ jobs:
         run: bash scripts/setup-${{ matrix.os }}.sh
 
       - name: build and test
-        rim: bash scripts/build-common.sh DEBUG=true SANITIZE=true
+        run: bash scripts/build-common.sh DEBUG=true SANITIZE=true
 
       - name: CCache cleanup
         # Manual ccache cleanup, using the ccache-action default max size
