simplify version string generation
Use only hash and dirty/broken flags, and get name/version from meson.
This allows the version to be bumped prior to tagging a release

--- a/src/meson.build
+++ b/src/meson.build
@@ -21,8 +21,9 @@ html_template = custom_target(
 # Creation of version.cpp
 
 version_cpp = vcs_tag(
-    command: ['git', 'describe', '--long', '--tags', '--dirty', '--broken'],
-    fallback: 'v' + meson.project_version(),
+    # Only return hash, possibly with '-dirty' and '-broken' tags
+    command: ['git', 'describe', '--match=""', '--always', '--dirty', '--broken'],
+    fallback: 'unknown',
     input: 'version.cpp.in',
     output: 'version.cpp',
     replace_string: 'PLACEHOLDER',
